@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- Copyright 2009-2012 Brian Pellin.
+ Copyright 2009-2013 Brian Pellin.
      
  This file is part of KeePassDroid.
 
@@ -37,10 +37,11 @@
 	  android:layout_above="@id/entry_save"
 	  android:scaleType="fitXY"
 	  android:src="@android:drawable/divider_horizontal_dark"/>
-	<ScrollView android:id="@+id/entry_scroll"
+	<com.keepassdroid.view.NoFocusScrollView android:id="@+id/entry_scroll"
 	  android:layout_width="fill_parent"
 	  android:layout_height="fill_parent"
-	  android:layout_above="@id/entry_divider">
+	  android:layout_above="@id/entry_divider"
+	  android:fillViewport="true">
 		<RelativeLayout android:layout_width="fill_parent"
 		  android:layout_height="wrap_content">
 			<!--  Title -->	
@@ -61,11 +62,18 @@
 			  android:singleLine="true"
 			  android:layout_below="@id/entry_title_label"
 			  android:hint="@string/hint_title"/>
+			<ImageView android:id="@+id/divider_title"
+			  android:layout_width="fill_parent"
+			  android:layout_height="wrap_content"
+			  android:layout_below="@id/icon_button"
+			  android:layout_marginTop="6dp"
+			  android:scaleType="fitXY"
+			  android:src="@android:drawable/divider_horizontal_dark"/>
 			<!-- Username -->
 			<TextView android:id="@+id/entry_user_name_label"
 			  android:layout_width="wrap_content"
 			  android:layout_height="wrap_content"
-			  android:layout_below="@id/icon_button"
+			  android:layout_below="@id/divider_title"
 			  android:text="@string/entry_user_name" />
 			<EditText android:id="@+id/entry_user_name" 
 			  android:layout_width="fill_parent"
@@ -74,11 +82,18 @@
 			  android:inputType="textEmailAddress"
 			  android:layout_below="@id/entry_user_name_label"
 			  android:hint="@string/hint_username"/>
+			<ImageView android:id="@+id/divider_username"
+			  android:layout_width="fill_parent"
+			  android:layout_height="wrap_content"
+			  android:layout_below="@id/entry_user_name"
+			  android:layout_marginTop="6dp"
+			  android:scaleType="fitXY"
+			  android:src="@android:drawable/divider_horizontal_dark"/>
 			<!--  URL -->
 			<TextView android:id="@+id/entry_url_label"
 			  android:layout_width="wrap_content"
 			  android:layout_height="wrap_content"
-			  android:layout_below="@id/entry_user_name" 
+			  android:layout_below="@id/divider_username" 
 			  android:text="@string/entry_url" />
 			<EditText android:id="@+id/entry_url" 
 			  android:layout_width="fill_parent"
@@ -87,11 +102,18 @@
 			  android:inputType="textUri"
 			  android:layout_below="@id/entry_url_label"
 			  android:hint="@string/hint_url"/>
+			<ImageView android:id="@+id/divider_url"
+			  android:layout_width="fill_parent"
+			  android:layout_height="wrap_content"
+			  android:layout_below="@id/entry_url"
+			  android:layout_marginTop="6dp"
+			  android:scaleType="fitXY"
+			  android:src="@android:drawable/divider_horizontal_dark"/>
 			<!-- Password -->
 			<TextView android:id="@+id/entry_password_label"
 			  android:layout_width="wrap_content"
 			  android:layout_height="wrap_content" 
-			  android:layout_below="@id/entry_url" 
+			  android:layout_below="@id/divider_url" 
 			  android:text="@string/entry_password" />
 			<Button android:id="@+id/generate_button"
 			  android:layout_below="@id/entry_password_label"
@@ -108,10 +130,19 @@
 			  android:layout_toLeftOf="@id/generate_button"
 			  android:hint="@string/hint_pass"
 			  android:layout_alignTop="@id/generate_button"/>
+			<ImageView android:id="@+id/divider_password"
+			  android:layout_width="fill_parent"
+			  android:layout_height="wrap_content"
+			  android:layout_below="@id/generate_button"
+			  android:layout_marginTop="6dp"
+			  android:scaleType="fitXY"
+			  android:src="@android:drawable/divider_horizontal_dark"/>
 			<!-- Confirm Password -->
 			<TextView android:id="@+id/entry_confpassword_label"
-			  android:layout_width="wrap_content" android:layout_height="wrap_content"
-			  android:layout_below="@id/entry_password" android:text="@string/entry_confpassword" />
+			  android:layout_width="wrap_content" 
+			  android:layout_height="wrap_content"
+			  android:layout_below="@id/divider_password" 
+			  android:text="@string/entry_confpassword" />
 			<EditText android:id="@+id/entry_confpassword" 
 			  android:layout_width="fill_parent"
 			  android:layout_height="wrap_content"
@@ -120,11 +151,18 @@
 			  android:singleLine="true"
 			  android:layout_below="@id/entry_confpassword_label"
 			  android:hint="@string/hint_conf_pass"/>
+			<ImageView android:id="@+id/divider_confpassword"
+			  android:layout_width="fill_parent"
+			  android:layout_height="wrap_content"
+			  android:layout_below="@id/entry_confpassword"
+			  android:layout_marginTop="6dp"
+			  android:scaleType="fitXY"
+			  android:src="@android:drawable/divider_horizontal_dark"/>
 			<!-- Comment -->
 			<TextView android:id="@+id/entry_comment_label"
 			  android:layout_width="wrap_content"
 			  android:layout_height="wrap_content" 
-			  android:layout_below="@id/entry_confpassword" 
+			  android:layout_below="@id/divider_confpassword" 
 			  android:text="@string/entry_comment" />
 			<EditText android:id="@+id/entry_comment" 
 		      android:inputType="textMultiLine"
@@ -132,7 +170,26 @@
 		      android:layout_height="wrap_content"
 			  android:layout_below="@id/entry_comment_label"
 			  android:hint="@string/hint_comment"/>
-		
-</RelativeLayout>
-	</ScrollView>
+			<ImageView android:id="@+id/divider_comment"
+			  android:layout_width="fill_parent"
+			  android:layout_height="wrap_content"
+			  android:layout_below="@id/entry_comment"
+			  android:scaleType="fitXY"
+			  android:src="@android:drawable/divider_horizontal_dark"/>
+			<LinearLayout android:id="@+id/advanced_container"
+			  android:layout_width="fill_parent"
+			  android:layout_height="wrap_content"
+			  android:layout_below="@id/divider_comment"
+			  android:orientation="vertical">
+			</LinearLayout>
+			<ImageButton android:id="@+id/add_advanced"
+			  android:layout_width="30sp"
+			  android:layout_height="30sp"
+			  android:layout_below="@id/advanced_container"
+			  android:src="@android:drawable/ic_input_add"
+			  android:scaleType="centerCrop"
+			  android:visibility="gone"
+			/>    
+		</RelativeLayout>
+	</com.keepassdroid.view.NoFocusScrollView>
 </RelativeLayout>
